# DeltaForge

./: .env.example  .pre-commit-config.yaml  Makefile  README.md  gunicorn.conf.py  main.py  pyproject.toml
.cspell/: custom-dictionary-workspace.txt
.github/workflows/: ci.yml
app/engine/: duplicates.py  excel.py  image.py  pdf.py  text.py  utils.py
app/web/: __init__.py  app.py  samples.py
app/web/assets/: clientside.js  minimap.js  style.css
app/web/callbacks/: __init__.py  duplicates.py  excel.py  image.py  pdf.py  shell.py  text.py
app/web/components/: diff_viewer.py  editor.py  file_uploader.py  image_viewer.py  minimap.py  sidebars.py  stats_bar.py  toolbar.py
app/web/layouts/: _constants.py  footer.py  header.py  main_layout.py  navbar.py
app/web/pages/: duplicates.py  excel.py  home.py  image.py  pdf.py  text.py
tests/engine/: test_duplicates.py  test_excel.py  test_image.py  test_pdf.py  test_text.py  test_utils.py
