[project]
name = "deltaforge"
version = "0.1.0"
license = { file = "LICENSE" }
description = "Toolbox utilities for data wrangling."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=4.1.0",
    "dash-iconify>=0.1.2",
    "dash-mantine-components>=2.6.1",
    "diff_match_patch>=20241021",
    "PyMuPDF",
    "gunicorn>=25.3.0",
    "numpy>=2.4.4",
    "openpyxl>=3.0.0",
    "pillow>=1.1.6",
    "pixelmatch>=0.1.0",
    "playwright>=1.30.0",
    "pandas>=2.0.0",
    "reportlab>=4.4.10",
]

[tool.uv.workspace]
members = ["apps/*"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests/"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.2.0",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
    "watchdog>=6.0.0",
]
